--- a/app/_layouts/collection.njk
+++ b/app/_layouts/collection.njk
@@ -69,7 +69,7 @@
         {% elif eleventyNavigation.key == "home" %}
           <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-l govuk-!-font-size-27">
-              {{ sections.title or app.sections.title or "Sections" }}
+              {{ sections.title or app.sections.title or "Services" }}
             </h2>
           </div>
           {% for item in collections.all | eleventyNavigation("home") %}
@@ -80,6 +80,15 @@
               <p class="govuk-body">{{ item.excerpt }}</p>
             </section>
           {% endfor %}
+          <div class="govuk-grid-column-full">
+            <h2 class="govuk-heading-l govuk-!-font-size-27">
+              Reference
+            </h2>
+          </div>
+          <div class="govuk-grid-column-one-half govuk-!-margin-bottom-6">
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link" href="/glossary">Glossary</a></h3>
+            <p class="govuk-body">A guide to terms used across the services</p>
+          </div>
         {% endif %}
       </div>
     {% endblock %}
